--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -169,7 +169,12 @@
   * {
     @apply border-border outline-ring/50;
   }
+
+  user-select {
+    @apply text-muted-foreground bg-red-500;
+  }
+
   body {
-    @apply bg-background text-foreground;
+    @apply bg-black text-foreground;
   }
 }
